<resources>
    <string name="app_name">DOBCalc</string>
    <string name="calcolate_your">Calcolate your</string>
    <string name="calculate_your">CALCULATE YOUR</string>
    <string name="age">AGE</string>
    <string name="in_minutes">IN MINUTES</string>
    <string name="button">Button</string>
    <string name="select_date">SELECT DATE</string>
    <string name="_14_9_2021">14.9.2021</string>
    <string name="selected_date">SELECTED DATE</string>
    <string name="in_minutes_till_date">IN MINUTES TILL DATE</string>
    <string name="selected_date2">SELECTED DATE</string>
    <string name="_00_00_0000">00.00.0000</string>
    <string name="_0">0</string>
    <string name="select_minutes">SELECT : MINUTES</string>
    <string name="in">IN</string>
    <string name="select_time">SELECT TIME</string>
    <string name="in_seconds">IN SECONDS</string>
</resources>